# site-shopvivaliz

./: .aider.chat.history.md  .aider.input.history  .api-key.txt  .auto-sync-trigger  .env.example  .env.local  .git-guardian.json  .git-test-hook.txt  .gitignore  .gitleaks.toml  .htaccess  .ios-config.json  .mcp.json  .sync-test-2.txt  .sync-test.txt  .tmp-google-ads-opt-deploy.tgz  .tmp-google-ads-opt-filelist.txt  404.php  50-IMPROVEMENTS-SUMMARY.md  500.php  ACAO-IMEDIATA-TOKEN-FIX.md  ACAO-PRODUCAO-HOJE.md  ACCESSIBILITY-AUDIT.md  ACTION-PLAN-POST-LAUNCH.md  AGENT-DUAL-VALIDATION-POLICY.md  AGENT-PROMPTS.md  AGENTES-24-7-COMPLETO.md  AGENTES-AUTONOMOS.md  AGENTES-CONFIG.md  AGENTES-INSTRUCOES.md  AGENTES-REQUISICAO-AUTO-SYNC.md  AGENTS-24-7-VALIDATION.md  AGENTS-ACCESS-INDEX.md  AGENTS-README.md  AGENTS-STATUS-REPORT.md  AGENTS.md  AI-SYSTEM-IMPLEMENTATION.md  AI_AUTOMATION_SYSTEM.md  AMOSTRA_VERIFICACAO_PRODUTO.md  ANALYSIS-SUMMARY.md  (+659 more)
.agent-heartbeats/: claude.heartbeat  gemini.heartbeat  gpt.heartbeat
.agent-status/: claude-local-station.json
.ai/: HYBRID_AI_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  agents.js  config.json  dashboard.html  llm-provider-unified.js  llm-provider.js  main.js  model-router.js  orchestrator.js  package-lock.json  package.json  server.js  validate.js  worker.js
.aider.tags.cache.v4/: cache.db
.claude/: launch.json  settings.json  settings.local.json
.codex/: config.toml
.git-rewrite/: backup-refs  commit  heads  index  message  parse  raw-refs  revs
agents/runtime/: README.md  agent.py  main.py  pyproject.toml
(+2123 files in other folders)
