[project]
name = "shopvivaliz-agents"
version = "0.1.0"
description = "Squad operacional do ShopVivaliz com OpenAI Agents SDK"
requires-python = ">=3.11"
dependencies = [
  "openai-agents>=0.2.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0"
]

[tool.uv]
package = false
